@@ -1,4 +1,5 @@
 0.9.3 (trunk):
+* Do not use OPAM compiler switches any more, as that's done in the packaging now.
 * Use fd-passing in the UNIX backend to spawn a process.
 
 0.9.2 (2012-03-28):
